# techcat-studio

./: .env  .gitignore  README.md  context-arch.md  environment.yml  example-input.md  requirements.txt  task-template.md  treemap.txt
.codex/: AGENTS.md  ARCHITECTURE.md  PRD.md  TASK-LOG.json  TASK-LOG.md
.codex/prompts/: backend_specialist.md  doc_writer.md  frontend_specialist.md  prompt_strategist.md  storage_engineer.md  task_logger.md
.codex/sample-input/: example-input.md
.codex/templates/: agents-template.md  architecture-template.md  prd-template.md  task-template.md
apps/api/: config.py  constants.py  main.py
apps/api/crewai/: README.md  pyproject.toml
apps/api/crewai/inputs/: example-feedback-input.md  example-user-input-2.md
apps/api/crewai/outputs/: doc-forge-poem.txt  doc-forge-prd-metrics.json  doc-forge-prd.md  poem.txt  task-smith-poem.txt
apps/api/crewai/src/doc-forge/: main.py
apps/api/crewai/src/doc-forge/crews/docforge_crew/: docforge_crew.py  models.py  prd_gen_crew.py  prdgen_crew.py
apps/api/crewai/src/doc-forge/crews/docforge_crew/config/: agents.yaml  tasks.yaml
apps/api/crewai/src/doc_forge/: main.py
apps/api/crewai/src/task-smith/: main.py
apps/api/crewai/src/task-smith/crews/poem_crew/: poem_crew.py
apps/api/crewai/src/task-smith/crews/tasksmith_crew/: models.py  task_smith_crew.py
apps/api/crewai/src/task-smith/crews/tasksmith_crew/config/: agents.yaml  tasks.yaml
apps/api/crewai/src/task_smith/: main.py
apps/techcat-studio/: .env.local  (+2 more)
scripts/: start.sh  stop.sh
sql-files/: common-queries.sql
(+91 files in other folders)
