[project]
name = "task_smith"
version = "0.1.0"
description = "task-smith using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.134.0,<1.0.0",
]

[project.scripts]
kickoff = "task_smith.main:kickoff"
run_crew = "task_smith.main:kickoff"
plot = "task_smith.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
